# auto-job-applier

./: TODO.md  pyproject.toml  runAiBot.py
models/: ApolloContact.py  Configuration.py  SubmittedJob.py  __init__.py
modules/: open_chrome.py
utils/: ai_email_writer.py  email_vali.py  linkedin_mail_reader.py  schedule_mail.py  scrape_apollo.py  send_emails_to_hrs.py  validate_email.py
